Cambios menores por error en logout

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-JWT_SECRET=MI_SECRETO_SUPER_SEGURO_2025
-APP_ENV=local
+APP_ENV=production
 
 DB_HOST=localhost
-DB_NAME=iasdsni-db
-DB_USER=root
-DB_PASS=
+DB_NAME=iasdsnic_db
+DB_USER=iasdsnic_user
+DB_PASS=NEmLVel4KR
+
+JWT_SECRET=CAMBIA_ESTE_SECRETO_LARGO_Y_UNICO
+
+FRONTEND_URL=https://iasdsni.com.ar
