Se mejora login y logout para funcionar en local y producción

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-APP_ENV=production
+APP_ENV=local
 
 DB_HOST=localhost
-DB_NAME=iasdsnic_db
-DB_USER=iasdsnic_user
-DB_PASS=NEmLVel4KR
+DB_NAME=iasdsni-db
+DB_USER=root
+DB_PASS=
 
 JWT_SECRET=CAMBIA_ESTE_SECRETO_LARGO_Y_UNICO
 
-FRONTEND_URL=https://iasdsni.com.ar
+
